--- a/WorkerService/appsettings.json
+++ b/WorkerService/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "UserListPath": "C:\\Users\\pmiralamov\\Desktop\\users.txt",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
