--- a/WorkerService/appsettings.json
+++ b/WorkerService/appsettings.json
@@ -1,5 +1,6 @@
 {
   "UserListPath": "C:\\Users\\pmiralamov\\Desktop\\users.txt",
+  "IntervalMinutes": 3,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
