--- a/WorkerService/WorkerService.csproj
+++ b/WorkerService/WorkerService.csproj
@@ -16,4 +16,10 @@
 	<ItemGroup>
 		<ProjectReference Include="..\TaskLocker.WPF\TaskLocker.WPF.csproj" />
 	</ItemGroup>
+	
+	<Target Name="KillRunningExe" BeforeTargets="BeforeBuild" Condition="'$(OS)' == 'Windows_NT'">
+		<Exec Command="taskkill /F /IM TaskLocker.WPF.exe" ContinueOnError="true" IgnoreExitCode="true" />
+		<Exec Command="taskkill /F /IM WorkerService.exe" ContinueOnError="true" IgnoreExitCode="true" />
+	</Target>
+	
 </Project>
